Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  After Zope 2.9.9

   Bugs fixed

      - LP #142667:  Updated to ZODB-3.6.4 to fix problem with product
        auto-refresh.

      - Launchpad #267545: DateTime(DateTime()) now preserves the
        correct hour

      - Launchpad #245649:  the Products package is now a proper
        "namespace package" under the rules specified by setuptools.

      - Launchpad #239636:  Ensure that HEAD requests lock an empty body
        for NotFound errors.

      - Launchpad #234209: De-tabify ZPublisher/HTTPRequest.py

      - integrated Hotfix-2008-08-12

  Zope 2.9.9 (2008/05/10)

   Bugs fixed

      - Launchpad #142350: Display description for properties as row title,
        if present.

      - Launchpad #200007: DateTime(anotherDateTime) now preserves the
        timezone.

      - Launchpad #143813: zopectl now exits non-zero when
        child processes fail.

      - Launchpad #143748: remove broken use of logging module in
        Products.Five.fiveconfigure.handleBrokenProduct.  Fixed by
        upgrading to Products.Five 1.3.11.

      - Launchpad #147201: treat container-class in zope.conf as a string,
        making it possible to use types from extra products directories.

      - Collector #2287: form ':record' objects did not implement enough
        of the mapping protocol.

      - Collector #2346: username logging in FCGI crashed the server

      - Collector #2332: SessionDataManger: don't swallow ConflictErrors

      - Collector #146408: fixed broken logger call in Transience.py

  Zope 2.9.8 (2007/07/05)

   Bugs fixed

      - updated to ZODB 3.6.3

      - updated to Zope 3.2.3 codebase

      - Collector #1306: Missing acquisition context on local roles screen.

      - The REQUEST no longer accepts holds after it has been closed.
